Archive2/77/6854cc8f28f225/output
main.cpp:11:18: error: expected a qualified name after 'typename'
typedef typename result_of<F()>::type MyInt;
                 ^
main.cpp:11:27: error: expected ';' after top level declarator
typedef typename result_of<F()>::type MyInt;
                          ^
                          ;
2 errors generated.
